Prototype A: podman-remote
This version uses the Pbench ARCA plugin to drive a sidecar container running
Pbench Agent code. Each "step" models a state of the Tool Meister ecosystem
from "initialize" through "start", "stop", "finalize", and "upload".

It lacks a mechanism to propagate context from one "step" to the next, which
means that only "initialize" actually works. I'm abandoning this approach in
favor of a single "step" with an externally controlled state machine to drive
it through the same states: this will fit nicely with the "signals" model
proposed for ARCA.

--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -12,14 +12,14 @@ jobs:
       - name: Check out code
         uses: actions/checkout@v3
       - name: Build image
-        run: docker-compose build
+        run: buildah build Containerfile.test
       - name: Run plugin
-        run: docker-compose up
+        run: podman pod up
       - name: Extract coverage data
         run: |
-          docker create --name test quay.io/arcalot/arcaflow-plugin-template-python:latest
-          docker cp test:/htmlcov .
-          docker rm test
+          podman create --name test quay.io/arcalot/parcaflow:latest
+          podman cp test:/htmlcov .
+          podman rm test
       - name: Publish coverage report to job summary
         run: |
           pip install html2text
